# multimodal-embedding

./: .gitignore  README.md  main.py  mme.def  pyproject.toml  train_cifp.py  train_mae.py  tune_mae.py
configs/: base.yaml
configs/dataset/: bold5000.yaml  hcp.yaml
configs/model/: brain_mae.yaml  cifp.yaml
datasets/: __init__.py  bold5000.py  hcp.py
models/: BrainMAE.py  __init__.py  brain_mae.py  cifp.py
trainers/: cifp_trainer.py  mae_trainer.py
utils/: cfip_util.py  dataset_util.py  mae.py  mae_util.py  metric.py  net_util.py
